--- a/packages/components/src/components/Select/styles/select.module.scss
+++ b/packages/components/src/components/Select/styles/select.module.scss
@@ -3,27 +3,29 @@
 @import '../../../utilities/sizeToken.module.scss';
 @import '../../../utilities/focusStyle.module.scss';
 @import '../../../utilities/transitions.module.scss';
-
+@import '../../../utilities/mediaQuery.module.scss';
 .root {
     @include focus-outline;
     @include transition-colors;
 
-    min-width: 0;
-    width: 100%;
-    position: relative;
-    display: flex;
-    align-items: stretch;
-    font-family: var(--body-family-stack);
-    font-weight: 400;
-    font-size: var(--body-size-medium);
-    line-height: var(--body-size-medium-line-height);
-    text-align: start;
-    height: sizeToken(9);
-    color: var(--text-color);
-    background-color: var(--base-color);
-    border-radius: var(--radius);
-    border: var(--line-width) solid var(--line-color-strong);
-    cursor: pointer;
+    & {
+        min-width: 0;
+        width: 100%;
+        position: relative;
+        display: flex;
+        align-items: stretch;
+        font-family: var(--body-family-stack);
+        font-weight: 400;
+        font-size: var(--body-size-medium);
+        line-height: var(--body-size-medium-line-height);
+        text-align: start;
+        height: sizeToken(9);
+        color: var(--text-color);
+        background-color: var(--base-color);
+        border-radius: var(--radius);
+        border: var(--line-width) solid var(--line-color-strong);
+        cursor: pointer;
+    }
 
     &:hover {
         border-color: var(--line-color-x-strong);
@@ -183,13 +185,15 @@
 
 .caret {
     @include transition-transform;
-    display: flex;
-    height: 100%;
-    width: sizeToken(4);
-    align-items: center;
-    justify-content: center;
-    margin: 0 sizeToken(1);
-    color: var(--text-color-weak);
+    & {
+        display: flex;
+        height: 100%;
+        width: sizeToken(4);
+        align-items: center;
+        justify-content: center;
+        margin: 0 sizeToken(1);
+        color: var(--text-color-weak);
+    }
 
     &:hover {
         color: var(--text-color-weak-hover);
@@ -219,12 +223,17 @@
     margin-top: sizeToken(2);
     background-color: var(--base-color);
     border: var(--line-width) solid var(--line-color-x-strong);
-    width: var(--radix-popover-trigger-width);
+    max-width: calc(100dvw - sizeToken(8));
+    min-width: var(--radix-popover-trigger-width);
     overflow: auto;
     padding: sizeToken(2) 0;
 
     &:has(li[role='option']) {
         display: block;
+    }
+
+    @include sm {
+        max-width: 500px
     }
 }
 
@@ -234,13 +243,15 @@
 
 .item {
     @include transition-colors;
-    display: flex;
-    justify-content: space-between;
-    padding: sizeToken(3) sizeToken(5);
-    cursor: pointer;
-    text-align: start;
-    font-size: var(--body-size-medium);
-    line-height: var(--body-size-medium-line-height);
+    & {
+        display: flex;
+        justify-content: space-between;
+        padding: sizeToken(3) sizeToken(5);
+        cursor: pointer;
+        text-align: start;
+        font-size: var(--body-size-medium);
+        line-height: var(--body-size-medium-line-height);
+    }
 
     &[data-highlighted='true'] {
         background-color: var(--box-neutral-strong-color);
